--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ code {
   display: flex;
   .content {
     width: 100%;
-    max-width: 760px;
+    max-width: 860px;
     margin: auto;
     background-color: #fff;
     position: relative;
@@ -32,6 +32,12 @@ code {
           width: auto;
           object-fit: contain;
         }
+      }
+    }
+    a {
+      text-decoration: underline;
+      &:hover {
+        text-decoration: none;
       }
     }
   }
