added react router, sign-in and sign-up

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,7 @@ code {
     margin: auto;
     background-color: #fff;
     position: relative;
-    .left-side {
+    .aside {
       display: flex;
       flex-direction: column;
       align-items: center;
